--- a/src/components/childCircle/childCircle.css
+++ b/src/components/childCircle/childCircle.css
@@ -8,18 +8,18 @@
 }
 
 .childDescription {
-    width: 100%;;
-    height:100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 20%;
-    padding-bottom: 10%;
     display: flex;
-    align-items: center;
     text-align: center;
+    align-items: center;
     justify-content: center;
-    font-family: Arial;
-    font-size: 0.7em;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-right: 1%;
+    padding-left: 1%;
+    height:100%;
+    width: 100%;
     text-decoration: none;
     overflow: hidden;
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 80%;
 }
