--- a/src/components/parentCircle/parentCircle.css
+++ b/src/components/parentCircle/parentCircle.css
@@ -7,9 +7,20 @@
 }
 
 .parentDescription {
-    font-family: Arial;
-    font-size: 1.3em;
-
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-right: 1%;
+    padding-left: 1%;
+    height:100%;
+    width: 100%;
+    text-decoration: none;
+    overflow: hidden;
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 80%;
 }
 
 
